--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<link rel="icon" type="image/png" href="rexminer.co/images/favicon-16x16.html" sizes="16x16" />
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="theme-color" content="#ffffff">
-	<title>BUSD MINER</title>
+	<title>WBNB MINER</title>
 	<!-- bootstrap core CSS -->
 	<link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 	<link href="assets/css/jumbotron-narrow.css" rel="stylesheet">
@@ -116,7 +116,7 @@
 								<div class="spend-input2">
 									<input class="form-control" id="spend-allowance" name="approve" onchange="" step="1000"
 									type="number" value="10000000000000000000000000">
-									<span class="bnb-text">BUSD</span>
+									<span class="bnb-text">WBNB</span>
 													</div>
 									<button class="btn btn-lg btn-buy" onclick="approve()" role="button">
 								Approve
@@ -130,8 +130,8 @@
 								<label for="spend">2. Enter BUSD Amount & Click Hire Below</label>
 								<div class="spend-input">
 									<input class="form-control" id="eth-to-spend" name="spend" onchange="updateBuyPrice()" step="100"
-									type="number" value="50">
-									<span class="bnb-text">BUSD</span>
+									type="number" value="0.1">
+									<span class="bnb-text">WBNB</span>
 								</div>
 							</div>
 							<div id="compoundWarning" style="display: none; color: gold; padding: 8px;">Information: You have unmined BUSD. A buy will reinvest this tokens as well!</div>
@@ -162,7 +162,7 @@
 								<div class="col-md-12">
 									<font style="font-size:14px">
 										<center>
-											<p>Earn 10% of the BUSD used to mine by anyone who joins mining
+											<p>Earn 10% of the WBNB used to mine by anyone who joins mining
 												using your link: <b><a id="playerreflink" onclick="copyRef()">?
 												<p></p><input id="copytextthing" style="display:none;" type="text" value="Hello Worldfdgerh"></a></b>
 										</center>
