--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 	<meta name="image" content="images/asda.png">
 	<!-- opengraph image -->
 	<meta property="og:image" content="images/asda.png">
-	<meta property="og:title" content="BUSD MINER">
+	<meta property="og:title" content="WBNB Miner">
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Hire Miners to earn BUSD">
+	<meta property="og:description" content="Hire Miners to earn WBNB">
 	<!-- Twitter meta -->
 	<meta name="twitter:card" content="images/usdtlogo.png">
 	<meta name="twitter:title" content="BUSD MINER">
-	<meta name="twitter:description" content="Hire Miners to earn BUSD">
+	<meta name="twitter:description" content="Hire Miners to earn WBNB">
 	<meta name="twitter:image" content="images/asda.png">
 	<!-- favicon files -->
 	 <link rel="icon" type="image/png" href="images/usdtlogo.png" sizes="32x32" />
@@ -73,7 +73,7 @@
 		<div>
 			<ul style="display:none;" class="nav nav-tabs nav-justified" id="myTabs" role="tablist">
 				<li role="presentation" class="active"><a id="miners-tab" role="tab" data-toggle="tab"
-						aria-controls="home" aria-expanded="true">BUSD Miner</a></li>
+						aria-controls="home" aria-expanded="true">WBNB Miner</a></li>
 			</ul>
 			<div class="tab-content" id="myTabContent">
 				<div class="tab-pane fade active in" role="tabpanel" id="home" aria-labelledby="miners-tab">
@@ -97,14 +97,14 @@
 								<img alt="Digging" class="icon" src="images/usdtlogo.png">
 								<div class="dm-container-right">
 									<h2>Contract</h2>
-									<p><span id="production-rate">14536730.15</span>  BUSD</p>
+									<p><span id="production-rate">14536730.15</span>  USD</p>
 								</div>
 							</div>
 							<div class="custom-row">
 								<img alt="Mined" class="icon" src="images/mine.svg">
 								<div class="dm-container-right">
 									<h2>Total Mined</h2>
-									<p><span id="adsd">402141.12</span> BUSD</p>
+									<p><span id="adsd">402141.12</span> USD</p>
 									<p><span id="asdf">1000</span> Daily limit</p>
 								</div>
 							</div>
@@ -127,7 +127,7 @@
 							</button>
 							<p id="spend-limit"></p>
 
-								<label for="spend">2. Enter BUSD Amount & Click Hire Below</label>
+								<label for="spend">2. Enter WBNB Amount & Click Hire Below</label>
 								<div class="spend-input">
 									<input class="form-control" id="eth-to-spend" name="spend" onchange="updateBuyPrice()" step="100"
 									type="number" value="0.1">
